# piac

./: .gitignore  .woodpecker.yml  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake  CppCheck.cmake  DetectCodeCoverage.cmake  FindMCSS.cmake  FindZMQPP.cmake  Findcryptopp.cmake  monero-install-targets.patch
doc/: README.md  build.md  communication.md  experiences.md  piac.doxy  piac.lcov.prolog  piac.m-dark-noindent+doxygen.compiled.css  secure-rpc.md  status.md
doc/pages/: coverage.dox  mainpage.dox
docker/: debian  debian-clang
docker/synapse/: Dockerfile  setup-synapse.sh
src/: cli.cpp  cli_matrix_thread.cpp  cli_matrix_thread.hpp  cli_message_thread.cpp  cli_message_thread.hpp  client.cpp  client.hpp  crypto_util.cpp  crypto_util.hpp  curve_keygen.cpp  daemon.cpp  daemon_db_thread.cpp  daemon_db_thread.hpp  daemon_p2p_thread.cpp  daemon_p2p_thread.hpp  db.cpp  db.hpp  db_thread.cpp  db_thread.hpp  document.cpp  document.hpp  jsonbase.cpp  jsonbase.hpp  logging.hpp  logging_util.cpp  logging_util.hpp  macro.hpp  matrix_thread.cpp  matrix_thread.hpp  monero_util.cpp  monero_util.hpp  p2p_thread.cpp  p2p_thread.hpp  project_config.cpp.in  project_config.hpp.in  string_util.cpp  string_util.hpp  util.cpp  util.hpp  zmq_util.cpp  (+1 more)
test/: CMakeLists.txt  kill_daemon.cpp  rnd_json_entry.cpp
test/curve-zmq/: CMakeLists.txt  authorized_clients  cli.peers.21191  cli.peers.21192  cli.peers.22191  cli.peers.22192  cli.peers.23191  client  client.pub  client2  client2.pub  client3  client3.pub  clients  ironhouse.server  ironhouse.server.pub  keys  stonehouse.server  stonehouse.server.pub
test/db/: CMakeLists.txt  cli.add_docs_json  cli.add_docs_json_other  cli.add_json  cli.add_rnd_json_entry  cli.connect.55092  cli.connect.55093  cli.docs  cli.hash  cli.numdoc  cli.query  cli.rm1  cli.rm1_noauth  cli.rm2  docs.json  pronoun.txt
test/matrix/: CMakeLists.txt  adjust-config.sh  cli.invite_room  cli.join_room  cli.matrix-login  synapse_server.sh
test/monero/: CMakeLists.txt  cli.balance
test/p2p/: CMakeLists.txt  cli.add_rnd_json_entry  cli.connect.23091  cli.connect.33091  cli.connect.36091  cli.new  cli.nokeys  cli.nouser  cli.status.connected  cli.wordcount  grep_log.cpp  kill_daemon.cpp
test/zmq/: CMakeLists.txt  cli.connect.55091  cli.connect.55191  cli.connect.56091  cli.connect.57091  cli.pirate.5555  pirate_server.cpp
test/zmq_network/: CMakeLists.txt  cli.connect.55091  cli.status.connected  kill_daemon.cpp
